# socioty

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  artifact.md  gen_ssh_file.sh  ssh_pi.configs
.cargo/: config.toml
benches/: README.md  bench_dprf.rs  cleanup_procs  coap_benchmarking  local_benchmarking  microbenchmark_deployment  mqtt_benchmarking.sh  parse_data.py
benches/coap_data/: nohup.out  run_10_10_output.txt  run_10_8_output.txt  run_10_9_output.txt  run_11_10_output.txt  run_11_11_output.txt  run_11_9_output.txt  run_12_10_output.txt  run_12_11_output.txt  run_12_12_output.txt  run_5_3_output.txt  run_5_4_output.txt  run_5_5_output.txt  run_6_4_output.txt  run_6_5_output.txt  run_6_6_output.txt  run_7_5_output.txt  run_7_6_output.txt  run_7_7_output.txt  run_8_6_output.txt  run_8_7_output.txt  run_8_8_output.txt  run_9_7_output.txt  run_9_8_output.txt  run_9_9_output.txt
benches/esp32_data/: eval_usbserial-144460.txt  eval_usbserial-1444710.txt  eval_usbserial-1444720.txt  eval_usbserial-1444730.txt  eval_usbserial-1444740.txt  init_usbserial-144460_run_10_10.txt  init_usbserial-144460_run_10_8.txt  init_usbserial-144460_run_10_9.txt  init_usbserial-144460_run_11_10.txt  init_usbserial-144460_run_11_11.txt  init_usbserial-144460_run_11_9.txt  init_usbserial-144460_run_12_10.txt  init_usbserial-144460_run_12_11.txt  (+232 more)
implementations/coap/: Cargo.toml  README.md
implementations/coap/examples/: init_config.toml  node_config.toml  request_config.toml
implementations/coap/src/: lib.rs
implementations/esp32/: Cargo.toml  README.md  esp_benchmarking.sh
implementations/esp32/.cargo/: config.toml
implementations/esp32/src/: lib.rs
implementations/mqtt/: Cargo.toml
implementations/mqtt/examples/: init_config.toml  local_mqtt.sh  node0001_config.toml  node0002_config.toml  node0003_config.toml  node0004_config.toml  node0005_config.toml  request_config.toml  rumqttd.toml
implementations/mqtt/src/: lib.rs
src/: lib.rs
(+1123 files in other folders)
