[package]
name = "socioty_coap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap = { version = "0.12" }
coap-lite = { version = "0.9" }
tokio = { version = "1.1" }
confy = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7" }
socioty = { path = "../.." }
ascon-aead = { version = "0.4.0" }
